--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node backend/app.js",
+    "start": "node app.js",
     "test": "gulp test"
   },
   "dependencies": {
